<resources>
    <string name="app_name">mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_your_fitness_journey">Start your Fitness Journey</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, again!</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="don_t_have_an_account_register_now">Don`t have an account? Register now</string>
    <string name="hello_register_to_get_started">Hello! Register to get started</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now</string>
    <string name="let_s_set_up_your_profile">Let’s set up your profile!</string>
    <string name="personalize">Personalize</string>
    <string name="select_gender">Select gender</string>
    <string name="enter_height_in_cm">Enter height (cm)</string>
    <string name="enter_weight_in_kg">Enter weight (kg)</string>
    <string name="enter_birth_date">Enter birth date (yyyy-mm-dd)</string>
    <string name="enter_target_weight">Enter target weight</string>
    <string name="select_body_type">Select body type</string>
    <string name="select_activity_level">Select activity level</string>
    <string name="select_goal_type">Select goal type</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send code</string>
    <string name="don_t_forget_to_verify_your_email_address_via_the_link_we_sent_you">Don\'t forget to verify your email address via the link we sent you</string>
    <string name="verification">Verification</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_email_address">Enter the verification code we just sent on your email address.</string>
    <string name="verify">Verify</string>
    <string name="didn_t_received_a_code_resend">Didn\'t received a code? Resend</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_unique_from_those_previously_used">Your new password must be unique from those previously used.</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="food">Food</string>
    <string name="breakfast">Breakfast</string>
    <string name="admin">Admin</string>
    <string name="food_requests">Food requests</string>
    <string name="change_role">Change role</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name">Food name</string>
    <string name="calories_per_100_gram">Calories per 100 gram:</string>
    <string name="proteins_per_100_gram">Proteins per 100 gram:</string>
    <string name="fats_per_100_gram">Fats per 100 gram:</string>
    <string name="carbohydrates_per_100_gram">Carbohydrates per 100 gram:</string>
    <string name="types_of_the_product">Types of the product:</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="save">Save</string>
    <string name="there_are_no_requests">There are no requests</string>
    <string name="food_request">Food request</string>
    <string name="height_format">Height: %1$d cm</string>
    <string name="weight_format">Weight: %1$d kg</string>
    <string name="goal_type_format">Goal: %1$s</string>
    <string name="target_weight_format">Target weight: %1$d kg</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_load_error">Failed to load profile</string>
    <string name="username">username</string>
    <string name="edit">Edit</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="goal">Goal Type:</string>
    <string name="target">Target Weight:</string>
    <string name="choose_food">Choose food (from existing)</string>
    <string name="add_new_food">Add new food</string>
    <string name="search">Search</string>
    <string name="birth_date">Birth Date</string>
    <string name="body_type">Body Type</string>
    <string name="gender">Gender</string>
    <string name="sport">Sport</string>
    <string name="calories_per_minute">Calories burned per minute</string>
</resources>