<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.login.LoginActivity"
    android:background="@drawable/shape_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginTop="160dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_back_glad_to_see_you_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/email"
            style="@style/OutlinedFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="41dp"
            android:hint="@string/enter_email"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#606060"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/username"
            style="@style/OutlinedFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="19dp"
            android:hint="@string/enter_username"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#606060"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/password"
            style="@style/OutlinedFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="19dp"
            android:hint="@string/enter_password"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#606060"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/forgotPassword"
            style="@style/AuthLinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/forgot_password"
            android:gravity="end"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/FilledFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="36dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/dontHaveAnAccount"
            style="@style/AuthLinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/don_t_have_an_account_register_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
